removed watermark and fixed the "about us" jump when the link is clicked

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -22,7 +22,7 @@ body{
     background-image: url(/assets/space.jpg);
     background-size: cover;
     width: 100%;
-    height: 700px;
+    height: 630px;
     padding-top: 10%;
     text-align: center;
     margin: 0 auto;
@@ -59,4 +59,5 @@ body{
 h1 {
     font-size: 60px;
     text-align: center;
+    padding-top: 5%
 }
